--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ div#inventory {
     position: absolute;
     top: 53.62%;
     width: 35.6%;
-    height: 26.87%; 
+    height: 26.87%;
 }
 
 div#itemSlots {
@@ -63,7 +63,7 @@ div#itemSlots {
 
 .item {
     position: relative;
-    width: 95%; 
+    width: 95%;
     height: 95%;
 }
 
@@ -104,6 +104,7 @@ div#room {
     width: 100%;
     height: 53.5%
 }
+
 img#dog {
     position: absolute;
     width: 9%;
@@ -146,20 +147,20 @@ div#overlay {
 /* Description box and Language */
 div#descBox {
     display: flex;
-    justify-content:flex-start;
-    align-items:center;
+    justify-content: flex-start;
+    align-items: center;
     position: absolute;
     top: 80.8%;
     width: 35.6%;
     height: 19.2%;
-    flex-flow: column wrap;    
+    flex-flow: column wrap;
 }
 
 div#flags {
     display: flex;
     min-width: 91.2%;
     margin-top: 5.1%;
-    justify-content:space-around;
+    justify-content: space-around;
     row-gap: 8px;
     flex-wrap: wrap;
 }
@@ -173,8 +174,8 @@ div#descText {
     margin-bottom: 4%;
     flex-grow: 1;
     overflow: scroll;
-    -ms-overflow-style: none; /* for Internet Explorer, Edge */
-    scrollbar-width: none; /* for Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 div#descText::-webkit-scrollbar {
@@ -191,4 +192,76 @@ p#description {
     min-height: 100%;
     height: 0;
     word-wrap: break-word;
+}
+
+
+/* References box */
+div#referenceBox {
+    position: absolute;
+    flex-direction: column;
+    top: 53.66%;
+    left: 35.8%;
+    width: 60.15%;
+    height: 42.4%;
+    padding: 2%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+p#reftext {
+    margin: 0;
+    width: 100%;
+    position: relative;
+    font-size: 3vmin;
+    align-self: flex-start;
+}
+
+div#repos {
+    width: 100%;
+    position: relative;
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+div#repos::-webkit-scrollbar {
+    display: none;
+}
+
+.repo {
+    background-color: rgb(172, 172, 172);
+    position: relative;
+    border: 0.5vmin solid rgb(66, 66, 66);
+    margin: 2.5%;
+    padding: 5px;
+    width: 36.55%;
+    height: 30%;
+    text-align: center;
+    overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    box-shadow: 0.4vmin 0.6vmin 0 #000;
+}
+
+.repo::-webkit-scrollbar {
+    display: none;
+}
+
+.repoText {
+    position: absolute;
+    color: rgb(255, 255, 255);
+    font-size: 3vmin;
+    width: 94%;
+    max-width: 100%;
+    min-height: 94%;
+    max-height: auto;
+    margin: 0%;
+    top: 3%;
+    left: 3%;
 }
